# sentiric-tts-service

./: .env.docker  .env.example  DEMO.md  Dockerfile  README.md  TASKS.md  app.py  docker-compose.service.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: docker-publish.yml
app/: main.py
app/core/: config.py
app/services/: tts_service.py
tests/: test_api.py
