[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiric-tts-service"
version = "0.1.0"
description = "Sentiric TTS Service for text-to-speech synthesis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "structlog",
    "prometheus-fastapi-instrumentator",
    "httpx",
    "soundfile",
    "numpy",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "transformers==4.39.3",

    # --- SÖZDİZİMİ DÜZELTMESİ ---
    # setuptools'un anlayacağı PEP 508 formatını kullanıyoruz.
    "TTS @ git+https://github.com/azmisahin-forks/coqui-TTS.git@sentiric"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"